<!--
  ~ Copyright (c) 2017 anno Domini.
  ~
  ~ Code below is a part of
  ~ https://github.com/halfiuuu/Notepad_x
  ~ available for use under the
  ~ GNU Affero General Public License v3.0
  ~ as stated in
  ~ https://github.com/halfiuuu/Notepad_x/blob/master/LICENSE
  ~
  ~ Created by Dawid Halfar
  ~ contact possible via halfardawid@gmail.com
  ~
  ~ I'm not sure what else this thing should state... Whatever.
  -->

<resources>
    <string name="app_name">Illumi-Notepad</string>
    <string name="add_note">Add a note</string>
    <string name="delete_all_notes">Delete all</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_delete_all">Are you sure you want to delete every single note you\'ve stored here?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading_went_wrong">Loading of the note went terribly wrong... You kind of should report it, that should not happen, like... at all.</string>
    <string name="change_title">Change title</string>
    <string name="save_n_exit">Save and exit</string>
    <string name="delete_note">Delete note</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="input_new_title">Input new title</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="saving_went_bad">Saving didn\'t go as planned, note did not get saved. ;(</string>
    <string name="saved">Saved note</string>
    <string name="text_note">Text note</string>
    <string name="choose_note_type">Pick a type of note</string>
    <string name="sorry_error">I\'m sorry, but whoever built this, didn\'t test this… An error occurred! :(</string>
    <string name="sketch_note">Sketch</string>
    <string name="no_editor_what">This is odd… There should be an editor, yet i couldn\'t find it…</string>
    <string name="change_color">Change color</string>
    <string name="select_brush">Select brush</string>
    <string name="color_palette">Color palette</string>
    <string name="toggle_eraser">Toggle eraser</string>
    <string name="move_mode">Move view</string>
    <string name="are_you_sure_quit">Are you sure you want to quit editing this note?</string>
    <string name="any_unsaved_changes_will_be_discarded">Any unsaved changes shall be discarded, lost forever…</string>
    <string name="pick_note_background_color">Pick new color for the note to use as a background</string>
    <string name="i_m_sure_exit">Yes, quit</string>
    <string name="rgb" translatable="false">RGB</string>
    <string name="pick_color_from_palette">Color palette</string>
    <string name="action_settings">Settings</string>
    <string name="hsv_rect" translatable="false">HSV</string>
    <string name="hsv_sliders">HSV Sliders</string>
    <string name="rgb_sliders">RGB Sliders</string>
    <string name="file">File</string>
    <string name="reset_zoom">Reset zoom</string>
    <string name="reset_position">Reset position</string>
    <string name="clear_canvas">Clear canvas</string>
    <string name="crop_canvas">Crop canvas</string>
    <string name="auto_crop">Auto-crop</string>
    <string name="crop_manually">Crop manually</string>
    <string name="crop_to_numbers">Crop to numbers</string>
    <string name="Cutout_x">Right cutout</string>
    <string name="Cutout_y">Top cutout</string>
    <string name="newSize_x">New width</string>
    <string name="newSize_y">New Height</string>
    <string name="must_be_greater_than_0">Value must be greater than 0</string>
    <string name="must_be_greater_than_0_or_equal">Value must be at least 0</string>
    <string name="edit_that_note">Edit note</string>
    <string name="solid_circle">Solid circle</string>
    <string name="soft_circle">Soft circle</string>
    <string name="brush_spacing">Spacing</string>
    <string name="brush_radius">Radius</string>
    <string name="bubble_brush">Bubble brush</string>
    <string name="placeholder">Placeholder string</string>
    <string name="note_list">Note list</string>
    <string name="note_tile_per_row">Tiles per row</string>
    <string name="note_tile_per_row_summary">Specifies the amount of tiles per row in note list</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="small">Small</string>
    <string name="very_large">Very large</string>
    <string name="huge">Huge</string>
    <string name="very_small">Very small</string>
    <string name="go_back">Go back</string>
    <string name="hollow">Hollow</string>
    <string name="cant_be_empty">This can not be empty</string>
    <string name="not_a_number">This doesn\'t look like a number</string>
    <string name="value_too_big">Value too big</string>
    <string name="value_too_small">Value too small</string>
    <string name="inner_solid">Inner solid percent</string>
    <string name="square_brush">Square Brush</string>
    <string name="rect_brush">Rectangular brush</string>
    <string name="ratio">Width/Height ratio</string>
    <string name="additional_buttons_main_list">Floating buttons</string>
    <string name="additional_buttons_main_list_summary">Turns on and off additional floating buttons in the bottom of note list</string>
    <string name="add_entry">Add entry</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed eros nec mi rutrum gravida nec a ante. Morbi nec felis non nunc imperdiet interdum at at est. Duis volutpat sodales dapibus. Vestibulum ut purus imperdiet, dictum diam id, tempus ipsum. Vivamus porttitor sapien ante. Nulla facilisi. Vestibulum in feugiat tortor. Quisque ut sapien venenatis nisl mollis pharetra ut vitae nisl. Nulla fermentum justo at vulputate sagittis. Proin et velit lobortis leo malesuada dignissim. Nunc quis elit sodales, dignissim turpis nec, posuere leo. Nulla sapien tortor, consequat ut velit sed, hendrerit porta augue. Nulla ullamcorper quis felis non feugiat. </string>
    <string name="duplicate">Duplicate</string>
    <string name="list_note">Check list</string>
    <string name="already_editing">Already editing</string>
    <string name="delete_entry">Delete entry</string>
    <string name="auto_scroll">Auto-scroll</string>
    <string name="auto_scroll_summary">Enables auto-scrolling for long notes</string>
    <string name="auto_scroll_speed">Auto-scroll speed</string>
    <string name="auto_scroll_speed_summary">Regulates speed of auto-scrolling long notes</string>
    <string name="pick_note_to_display">Pick note to display</string>
    <string name="missing">Note missing</string>
    <string name="loading_note">Loading note</string>
    <string-array name="color_names">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>Amber</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Blue Grey</item>
    </string-array>
    <string-array name="pref_note_list_auto_scroll_speed_entries">
        <item>Slower than a snail</item>
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
        <item>Too fast</item>
    </string-array>
</resources>
