<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sem_move_mode"
        android:checkable="true"
        android:icon="@drawable/move"
        android:title="@string/move_mode"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sem_eraser"
        android:icon="@drawable/eraser"
        android:title="@string/toggle_eraser"
        android:checkable="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sem_brush"
        android:icon="@drawable/brush"
        android:title="@string/select_brush"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sem_palette"
        android:icon="@drawable/color_palette"
        android:title="@string/color_palette"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/gnem_save"
        android:icon="@drawable/save"
        android:title="@string/save"
        app:showAsAction="never" />
    <item
        android:id="@+id/gnam_change_title"
        android:title="@string/change_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/gnam_change_color"
        android:title="@string/change_color"
        app:showAsAction="never" />
    <item
        android:id="@+id/gnam_save_exit"
        android:title="@string/save_n_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/gnam_delete"
        android:title="@string/delete_note"
        app:showAsAction="never" />

</menu>