<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 anno Domini.
  ~
  ~ Code below is a part of
  ~ https://github.com/halfiuuu/Notepad_x
  ~ available for use under the
  ~ GNU Affero General Public License v3.0
  ~ as stated in
  ~ https://github.com/halfiuuu/Notepad_x/blob/master/LICENSE
  ~
  ~ Created by Dawid Halfar
  ~ contact possible via halfardawid@gmail.com
  ~
  ~ I'm not sure what else this thing should state... Whatever.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cnt_edit"
        android:title="@string/edit_that_note"/>
    <item
        android:id="@+id/cnt_duplicate"
        android:title="@string/duplicate"/>
    <item
        android:id="@+id/cnt_change_title"
        android:title="@string/change_title"/>
    <item
        android:id="@+id/cnt_change_color"
        android:title="@string/change_color"/>
    <item
        android:id="@+id/cnt_delete"
        android:title="@string/delete_note"/>
</menu>