<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 anno Domini.
  ~
  ~ Code below is a part of
  ~ https://github.com/halfiuuu/Notepad_x
  ~ available for use under the
  ~ GNU Affero General Public License v3.0
  ~ as stated in
  ~ https://github.com/halfiuuu/Notepad_x/blob/master/LICENSE
  ~
  ~ Created by Dawid Halfar
  ~ contact possible via halfardawid@gmail.com
  ~
  ~ I'm not sure what else this thing should state... Whatever.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/gnem_save"
        android:icon="@drawable/save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/gnam_change_title"
        android:title="@string/change_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/gnam_change_color"
        android:title="@string/change_color"
        app:showAsAction="never" />
    <item
        android:id="@+id/gnam_save_exit"
        android:title="@string/save_n_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/gnam_delete"
        android:title="@string/delete_note"
        app:showAsAction="never" />
</menu>