<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 anno Domini.
  ~
  ~ Code below is a part of
  ~ https://github.com/halfiuuu/Notepad_x
  ~ available for use under the
  ~ GNU Affero General Public License v3.0
  ~ as stated in
  ~ https://github.com/halfiuuu/Notepad_x/blob/master/LICENSE
  ~
  ~ Created by Dawid Halfar
  ~ contact possible via halfardawid@gmail.com
  ~
  ~ I'm not sure what else this thing should state... Whatever.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mam_add"
        android:icon="@drawable/add_note"
        android:title="@string/add_note"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mam_delete"
        android:title="@string/delete_all_notes"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/mam_settings"
        android:title="@string/action_settings"
        android:visible="true"
        app:showAsAction="never" />
</menu>